fixed issue with subscription expires overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -8817,6 +8817,9 @@ label.certificate-button a {
 .border-bottom-black {
   border-bottom: 1px solid #232323;
 }
+.w-full {
+  width: 100%;
+}
 @charset "UTF-8";
 /*  <!-- RESPONSIVE
 ============================================ --> */
