--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6065,3 +6065,7 @@ label.certificate-button a {
 .border-bottom-black {
   border-bottom: 1px solid #232323;
 }
+
+.w-full {
+  width: 100%;
+}
